src/objects/DRE__DRE_Result__c.object
<CustomObject>
    <customHelpPage>DRE__DREHelp</customHelpPage>
    <fields>
        <fullName>DRE__Attribute__c</fullName>
        <description>Used to store content (e.g. email)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__Check_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__DRE_Group__c</fullName>
        <label>DRE Result Group</label>
        <referenceTo>DRE__DRE_Result_Group__c</referenceTo>
        <relationshipLabel>Results</relationshipLabel>
        <relationshipName>DRE_Results</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DRE__DRE_Rule__c</fullName>
        <label>DRE Rule</label>
        <referenceTo>DRE__DRE_Rule__c</referenceTo>
        <relationshipLabel>Rule Results</relationshipLabel>
        <relationshipName>DRE_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DRE__Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__Order__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRE__Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>DRE Result</label>
    <nameField>
        <displayFormat>DRERSLT-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRE Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>